добавлена секция lead

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <meta name="keywords" content="Путешествия, Путешествия по России">
   <meta name="author" content="Яндекс Практикум">
   <link rel="stylesheet" href="./pages/index.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Путешествия по России</title>
 </head>
 
@@ -26,6 +25,32 @@
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
       <img class="lead__image" src="./images/header-photo-polka.jpg" alt="персона лежит на полке плацкарта, поверх отображена схема маршрута Псков — Улан-Удэ">
       <p class="lead__image-caption">ваша полка — верхняя</p>
+    </section>
+    <section class="intro">
+      <h2 class="intro__title">Чего мы там не видели?</h2>
+      <p class="intro__paragraph">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать,
+        но только 36% планируют провести отпуск в родной стране. Мол,
+        чего мы тут, дома, не видели? На самом деле, Россия — это целая
+        вселенная с ласковым морем юга, густыми лесами Саян и суровыми
+        льдами плато Путорана. А ещё увидеть все эти красоты можно без
+        миллионов на счету, загранпаспорта и многочасовых перелетов. Как,
+        например, Вера Башмакова — смелая молодая мама, которая взяла в
+        охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
+        километров по родной стране. Мы выбрали и описали некоторые
+        интересные места, достойные вашего отпуска.
+      </p>
+      <ul class="intro__facts">
+        <li class="intro__fact">Часовых поясов <span class="intro__fact_weight-normal">11</span></li>
+        <li class="intro__fact">Объектов природного наследия ЮНЕСКО <span class="intro__fact_weight-normal">12</span></li>
+        <li class="intro__fact">Объектов культурного наследия ЮНЕСКО <span class="intro__fact_weight-normal">16</span></li>
+        <li class="intro__fact">Природных заповедников <span class="intro__fact_weight-normal">105</span></li>
+        <li class="intro__fact">Аэропортов <span class="intro__fact_weight-normal">241</span></li>
+      </ul>
+    </section>
+    <section class="photo-grid" aria-label="photo-grid">
+      <ul class="photo-grid__list">
+        <li><img src="" alt=""></li>
+      </ul>
     </section>
   </main>
 </body>
