изменен header, начата секция photo-grid

--- a/index.html
+++ b/index.html
@@ -47,9 +47,20 @@
         <li class="intro__fact">Аэропортов <span class="intro__fact_weight-normal">241</span></li>
       </ul>
     </section>
-    <section class="photo-grid" aria-label="photo-grid">
+    <section class="photo-grid" aria-label="фотогалерея">
       <ul class="photo-grid__list">
-        <li><img src="" alt=""></li>
+        <li class="photo-grid__item"><img src="./images/main-photo-window.jpg" alt="окно поезда"></li>
+        <li class="photo-grid__item"><img src="./images/main-photo-cloud.jpg" alt="горы в облаках"></li>
+        <li class="photo-grid__item"><img src="./images/main-photo-dog.jpg" alt="собака на стоге сена"></li>
+        <li class="photo-grid__item"><img src="./images/main-photo-forest.jpg" alt="туманный лес"></li>
+        <li class="photo-grid__item"><img src="./images/main-photo-car.jpg" alt="машина на голубом льду"></li>
+        <li class="photo-grid__item"><img src="./images/main-photo-water.jpg" alt="пляж у воды"></li>
+        <li class="photo-grid__item"><img src="./images/main-photo-grey-mountains.jpg" alt="горы с белыми пиками"></li>
+        <li class="photo-grid__item"><img src="./images/main-photo-crosswalk.jpg" alt="знак пешеходного перехода"></li>
+        <li class="photo-grid__item"><img src="./images/main-photo-brown-mountains.jpg" alt="горы в тумане"></li>
+        <li class="photo-grid__item"><img src="./images/main-photo-forest-mountains.jpg" alt="лес у подножия гор"></li>
+        <li class="photo-grid__item"><img src="./images/main-photo-water-rocks.jpg" alt="горы на побережье"></li>
+        <li class="photo-grid__item"><img src="./images/main-photo-green-mountains.jpg" alt="пики гор в тумане"></li>
       </ul>
     </section>
   </main>
