--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body class="page">
+
   <header class="header">
     <a class="header__logo" href="#"><img src="images/header-logo.svg" alt="логотип сайта"></a>
     <div class="header__lang-links">
@@ -19,6 +20,7 @@
       <a class="header__lang-link header__lang-link_en">En</a>
     </div>
   </header>
+
   <main class="main">
     <section class="lead">
       <h1 class="lead__title">Путешествия по России</h1>
@@ -49,19 +51,36 @@
     </section>
     <section class="photo-grid" aria-label="фотогалерея">
       <ul class="photo-grid__list">
-        <li class="photo-grid__item"><img src="./images/main-photo-window.jpg" alt="окно поезда"></li>
-        <li class="photo-grid__item"><img src="./images/main-photo-cloud.jpg" alt="горы в облаках"></li>
-        <li class="photo-grid__item"><img src="./images/main-photo-dog.jpg" alt="собака на стоге сена"></li>
-        <li class="photo-grid__item"><img src="./images/main-photo-forest.jpg" alt="туманный лес"></li>
-        <li class="photo-grid__item"><img src="./images/main-photo-car.jpg" alt="машина на голубом льду"></li>
-        <li class="photo-grid__item"><img src="./images/main-photo-water.jpg" alt="пляж у воды"></li>
-        <li class="photo-grid__item"><img src="./images/main-photo-grey-mountains.jpg" alt="горы с белыми пиками"></li>
-        <li class="photo-grid__item"><img src="./images/main-photo-crosswalk.jpg" alt="знак пешеходного перехода"></li>
-        <li class="photo-grid__item"><img src="./images/main-photo-brown-mountains.jpg" alt="горы в тумане"></li>
-        <li class="photo-grid__item"><img src="./images/main-photo-forest-mountains.jpg" alt="лес у подножия гор"></li>
-        <li class="photo-grid__item"><img src="./images/main-photo-water-rocks.jpg" alt="горы на побережье"></li>
-        <li class="photo-grid__item"><img src="./images/main-photo-green-mountains.jpg" alt="пики гор в тумане"></li>
+        <li><img class="photo-grid__item" src="./images/main-photo-window.jpg" alt="окно поезда"></li>
+        <li><img class="photo-grid__item" src="./images/main-photo-cloud.jpg" alt="горы в облаках"></li>
+        <li><img class="photo-grid__item" src="./images/main-photo-dog.jpg" alt="собака на стоге сена"></li>
+        <li><img class="photo-grid__item" src="./images/main-photo-forest.jpg" alt="туманный лес"></li>
+        <li><img class="photo-grid__item" src="./images/main-photo-car.jpg" alt="машина на голубом льду"></li>
+        <li><img class="photo-grid__item" src="./images/main-photo-water.jpg" alt="пляж у воды"></li>
+        <li><img class="photo-grid__item" src="./images/main-photo-grey-mountains.jpg" alt="горы с белыми пиками"></li>
+        <li><img class="photo-grid__item" src="./images/main-photo-crosswalk.jpg" alt="знак пешеходного перехода"></li>
+        <li><img class="photo-grid__item" src="./images/main-photo-brown-mountains.jpg" alt="горы в тумане"></li>
+        <li><img class="photo-grid__item" src="./images/main-photo-forest-mountains.jpg" alt="лес у подножия гор"></li>
+        <li><img class="photo-grid__item" src="./images/main-photo-water-rocks.jpg" alt="горы на побережье"></li>
+        <li><img class="photo-grid__item" src="./images/main-photo-green-mountains.jpg" alt="пики гор в тумане"></li>
       </ul>
+
+      <!--<ul class="photo-grid__list">
+        <li class="photo-grid__item"></li>
+        <li class="photo-grid__item"></li>
+        <li class="photo-grid__item"></li>
+        <li class="photo-grid__item"></li>
+        <li class="photo-grid__item"></li>
+        <li class="photo-grid__item"></li>
+        <li class="photo-grid__item"></li>
+        <li class="photo-grid__item"></li>
+        <li class="photo-grid__item"></li>
+        <li class="photo-grid__item"></li>
+        <li class="photo-grid__item"></li>
+        <li class="photo-grid__item"></li>
+
+
+      </ul>-->
     </section>
   </main>
 </body>
