до оптимизации place-baikal

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body class="page">
 
-  <header class="header">
+  <header class="header page__section">
     <a class="header__logo" href="#"><img src="images/header-logo.svg" alt="логотип сайта"></a>
     <div class="header__lang-links">
       <a class="header__lang-link header__lang-link_ru">Ru</a>
@@ -181,7 +181,28 @@
         </div>
       </article>
     </section>
+    <section class="place-baikal">
+
+      <a class="place-baikal__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+        <div class="place-baikal__cover">
+          <h2 class="place-baikal__title">До Байкала «на собаках»</h2>
+          <p class="place-baikal__subtitle">
+            По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
+          </p>
+        </div>
+      </a>
+
+    </section><!--
+  <div class="section">
+    <div class="container">
+      <div class="overlay">
+        <div class="title">Title</div>
+      </div>
+    </div>
+  </div>
+-->
   </main>
+  <footer class="footer"></footer>
 </body>
 
 </html>
