:checkered_flag: Финальная версия проекта (до ревью)

--- a/index.html
+++ b/index.html
@@ -12,25 +12,23 @@
 </head>
 
 <body class="page">
-
-  <header class="header page__section">
+  <header class="header page__header">
     <a class="header__logo" href="#"><img src="images/header-logo.svg" alt="логотип сайта"></a>
     <div class="header__lang-links">
-      <a class="header__lang-link header__lang-link_ru">Ru</a>
-      <a class="header__lang-link header__lang-link_en">En</a>
+      <a class="header__lang-link header__lang-link_ru page__font-smoothed">Ru</a>
+      <a class="header__lang-link header__lang-link_en page__font-smoothed">En</a>
     </div>
   </header>
-
   <main class="main">
-    <section class="lead">
-      <h1 class="lead__title">Путешествия по России</h1>
-      <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+    <section class="lead page__lead">
+      <h1 class="lead__title page__font-smoothed">Путешествия по России</h1>
+      <p class="lead__subtitle page__font-smoothed">Настоящая страна не в выпусках новостей, а здесь.</p>
       <img class="lead__image" src="./images/header-photo-polka.jpg" alt="персона лежит на полке плацкарта, поверх отображена схема маршрута Псков — Улан-Удэ">
-      <p class="lead__image-caption">ваша полка — верхняя</p>
+      <p class="lead__image-caption page__font-smoothed">ваша полка — верхняя</p>
     </section>
-    <section class="intro">
-      <h2 class="intro__title">Чего мы там не видели?</h2>
-      <p class="intro__paragraph">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать,
+    <section class="intro page__intro">
+      <h2 class="intro__title page__font-smoothed">Чего мы там не видели?</h2>
+      <p class="intro__paragraph page__font-smoothed">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать,
         но только 36% планируют провести отпуск в родной стране. Мол,
         чего мы тут, дома, не видели? На самом деле, Россия — это целая
         вселенная с ласковым морем юга, густыми лесами Саян и суровыми
@@ -42,14 +40,14 @@
         интересные места, достойные вашего отпуска.
       </p>
       <ul class="intro__facts">
-        <li class="intro__fact">Часовых поясов <span class="intro__fact_weight-normal">11</span></li>
-        <li class="intro__fact">Объектов природного наследия ЮНЕСКО <span class="intro__fact_weight-normal">12</span></li>
-        <li class="intro__fact">Объектов культурного наследия ЮНЕСКО <span class="intro__fact_weight-normal">16</span></li>
-        <li class="intro__fact">Природных заповедников <span class="intro__fact_weight-normal">105</span></li>
-        <li class="intro__fact">Аэропортов <span class="intro__fact_weight-normal">241</span></li>
+        <li class="intro__fact page__font-smoothed">Часовых поясов <span class="intro__fact_weight-normal">11</span></li>
+        <li class="intro__fact page__font-smoothed">Объектов природного наследия ЮНЕСКО <span class="intro__fact_weight-normal">12</span></li>
+        <li class="intro__fact page__font-smoothed">Объектов культурного наследия ЮНЕСКО <span class="intro__fact_weight-normal">16</span></li>
+        <li class="intro__fact page__font-smoothed">Природных заповедников <span class="intro__fact_weight-normal">105</span></li>
+        <li class="intro__fact page__font-smoothed">Аэропортов <span class="intro__fact_weight-normal">241</span></li>
       </ul>
     </section>
-    <section class="photo-grid" aria-label="фотогалерея">
+    <section class="photo-grid page__photo-grid" aria-label="фотогалерея">
       <ul class="photo-grid__list">
         <li><img class="photo-grid__item" src="./images/main-photo-window.jpg" alt="окно поезда"></li>
         <li><img class="photo-grid__item" src="./images/main-photo-cloud.jpg" alt="горы в облаках"></li>
@@ -66,22 +64,22 @@
       </ul>
     </section>
     <section class="places" aria-label="места">
-      <article class="place">
-        <h2 class="place__title">Куршская коса</h2>
+      <article class="place page__place">
+        <h2 class="place__title page__font-smoothed">Куршская коса</h2>
         <div class="place__website">
-          <p class="place__url">url</p>
-          <a class="place__link" href="http://park-kosa.ru">
+          <p class="place__url page__font-smoothed">url</p>
+          <a class="place__link page__font-smoothed" href="http://park-kosa.ru" target="blank">
             park-kosa.ru
           </a>
         </div>
         <img class="place__image" src="./images/main-photo-park-kosa.jpg" alt="Куршская коса">
         <div class="place__text">
-          <p class="place__paragraph">
+          <p class="place__paragraph page__font-smoothed">
             Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта
             — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря
             с другой. Уникальная природная зона на краю российского анклава.
           </p>
-          <p class="place__paragraph">
+          <p class="place__paragraph page__font-smoothed">
             На этом Калининградская область не заканчивается. Для путешественника и исследователя
             там же по соседству — самая западная точка России, Балтийская коса, — и немецкое
             наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету,
@@ -89,21 +87,21 @@
           </p>
         </div>
       </article>
-      <article class="place">
-        <h2 class="place__title">Кольский</h2>
+      <article class="place page__place">
+        <h2 class="place__title page__font-smoothed">Кольский</h2>
         <div class="place__website">
-          <p class="place__url">url</p>
-          <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">
+          <p class="place__url page__font-smoothed">url</p>
+          <a class="place__link page__font-smoothed" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="blank">
             National Geographic
           </a>
         </div>
         <img class="place__image" src="./images/main-photo-kolsky.jpg" alt="Кольский">
         <div class="place__text">
-          <p class="place__paragraph">
+          <p class="place__paragraph page__font-smoothed">
             Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
             тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
           </p>
-          <p class="place__paragraph">
+          <p class="place__paragraph page__font-smoothed">
             Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля
             в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний
             об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой
@@ -112,23 +110,23 @@
           </p>
         </div>
       </article>
-      <article class="place">
-        <h2 class="place__title">Алтай</h2>
+      <article class="place page__place">
+        <h2 class="place__title page__font-smoothed">Алтай</h2>
         <div class="place__website">
-          <p class="place__url">url</p>
-          <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">
+          <p class="place__url page__font-smoothed">url</p>
+          <a class="place__link page__font-smoothed" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="blank">
             Facebook
           </a>
         </div>
         <img class="place__image" src="./images/main-photo-altai.jpg" alt="Алтай">
         <div class="place__text">
-          <p class="place__paragraph">
+          <p class="place__paragraph page__font-smoothed">
             Алтай — одно из красивейших мест в России.
             В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны,
             усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна,
             сможете познакомиться с невидимым чудом здешних мест — горным воздухом.
           </p>
-          <p class="place__paragraph">
+          <p class="place__paragraph page__font-smoothed">
             Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
             Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси,
             над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы —
@@ -136,22 +134,22 @@
           </p>
         </div>
       </article>
-      <article class="place">
-        <h2 class="place__title">Зимний Байкал</h2>
+      <article class="place page__place">
+        <h2 class="place__title page__font-smoothed">Зимний Байкал</h2>
         <div class="place__website">
-          <p class="place__url">url</p>
-          <a class="place__link" href="https://vk.com/baikalmile">
+          <p class="place__url page__font-smoothed">url</p>
+          <a class="place__link page__font-smoothed" href="https://vk.com/baikalmile" target="blank">
             https://vk.com/baikalmile
           </a>
         </div>
         <img class="place__image" src="./images/main-photo-baikal.jpg" alt="Зимний Байкал">
         <div class="place__text">
-          <p class="place__paragraph">
+          <p class="place__paragraph page__font-smoothed">
             Всем известен Байкал как крупнейшее озеро
             в мире. Многие также знают, что это самый большой источник пресной
             воды и одно из красивейших мест в России.
           </p>
-          <p class="place__paragraph">
+          <p class="place__paragraph page__font-smoothed">
             Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу.
             Это такой вид спорта, когда лыжник привязывает себя
             к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду.
@@ -159,17 +157,17 @@
           </p>
         </div>
       </article>
-      <article class="place">
-        <h2 class="place__title">Карелия</h2>
+      <article class="place page__place">
+        <h2 class="place__title page__font-smoothed">Карелия</h2>
         <div class="place__website">
-          <p class="place__url">url</p>
-          <a class="place__link" href="http://vodlozero.ru">
+          <p class="place__url page__font-smoothed">url</p>
+          <a class="place__link page__font-smoothed" href="http://vodlozero.ru" target="blank">
             http://vodlozero.ru/
           </a>
         </div>
         <img class="place__image" src="./images/main-photo-karelia.jpg" alt="Карелия">
         <div class="place__text">
-          <p class="place__paragraph">
+          <p class="place__paragraph page__font-smoothed">
             Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница
             не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
             национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже
@@ -182,27 +180,47 @@
       </article>
     </section>
     <section class="place-baikal">
-
-      <a class="place-baikal__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-        <div class="place-baikal__cover">
-          <h2 class="place-baikal__title">До Байкала «на собаках»</h2>
-          <p class="place-baikal__subtitle">
-            По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
-          </p>
-        </div>
-      </a>
-
-    </section><!--
-  <div class="section">
-    <div class="container">
-      <div class="overlay">
-        <div class="title">Title</div>
-      </div>
-    </div>
-  </div>
--->
-  </main>
-  <footer class="footer"></footer>
+        <a class="place-baikal__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="blank">
+          <div class="place-baikal__cover">
+            <h2 class="place-baikal__title page__font-smoothed">До Байкала «на собаках»</h2>
+            <p class="place-baikal__subtitle page__font-smoothed">
+              По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
+            </p>
+          </div>
+        </a>
+    </section>
+  </main><!---->
+  <footer class="footer page__footer">
+    <nav class="footer__menu">
+      <ul class="footer__links">
+        <li>
+          <a class="footer__link page__font-smoothed" href="https://yandex.ru/maps" target="blank">
+            Карты
+          </a>
+        </li>
+        <li>
+          <a class="footer__link page__font-smoothed" href="https://yandex.ru/pogoda" target="blank">
+            Погода
+          </a>
+        </li>
+        <li>
+          <a class="footer__link page__font-smoothed" href="https://rasp.yandex.ru" target="blank">
+            Расписание
+          </a>
+        </li>
+        <li>
+          <a class="footer__link page__font-smoothed" href="https://calendar.yandex.ru" target="blank">
+            Календарь
+          </a>
+        </li>
+        <li>
+          <a class="footer__link page__font-smoothed" href="https://travel.yandex.ru" target="blank">
+            Путешествия
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <p class="footer__copyright page__font-smoothed">© 2021. Grbchk</p>
+  </footer>
 </body>
-
 </html>
