:checkered_flag: правки после ревью

--- a/index.html
+++ b/index.html
@@ -181,12 +181,13 @@
     </section>
     <section class="place-baikal">
         <a class="place-baikal__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="blank">
-          <div class="place-baikal__cover">
-            <h2 class="place-baikal__title page__font-smoothed">До Байкала «на собаках»</h2>
-            <p class="place-baikal__subtitle page__font-smoothed">
-              По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
-            </p>
-          </div>
+          <div class="place-baikal__overlay"></div>
+            <div class="place-baikal__cover">
+              <h2 class="place-baikal__title page__font-smoothed">До Байкала «на собаках»</h2>
+              <p class="place-baikal__subtitle page__font-smoothed">
+                По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
+              </p>
+            </div>
         </a>
     </section>
   </main><!---->
