:alien: правки после ревью

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="header page__header">
     <a href="#"><img class="header__logo" src="images/header-logo.svg" alt="логотип сайта"></a>
     <ul class="header__lang-links">
-      <li><a class="header__lang-link page__font-smoothed" href="#">Ru</a></li>
+      <li><a class="header__lang-link header__lang-link_active page__font-smoothed" href="#">Ru</a></li>
       <li><a class="header__lang-link page__font-smoothed" href="#">En</a></li>
     </ul>
   </header>
@@ -42,11 +42,11 @@
         интересные места, достойные вашего отпуска.
       </p>
       <ul class="intro__facts">
-        <li class="intro__fact page__font-smoothed">Часовых поясов <span class="intro__span-accent_weight-normal">11</span></li>
-        <li class="intro__fact page__font-smoothed">Объектов природного наследия ЮНЕСКО <span class="intro__span-accent_weight-normal">12</span></li>
-        <li class="intro__fact page__font-smoothed">Объектов культурного наследия ЮНЕСКО <span class="intro__span-accent_weight-normal">16</span></li>
-        <li class="intro__fact page__font-smoothed">Природных заповедников <span class="intro__span-accent_weight-normal">105</span></li>
-        <li class="intro__fact page__font-smoothed">Аэропортов <span class="intro__span-accent_weight-normal">241</span></li>
+        <li class="intro__fact page__font-smoothed">Часовых поясов <span class="intro__span-accent">11</span></li>
+        <li class="intro__fact page__font-smoothed">Объектов природного наследия ЮНЕСКО <span class="intro__span-accent">12</span></li>
+        <li class="intro__fact page__font-smoothed">Объектов культурного наследия ЮНЕСКО <span class="intro__span-accent">16</span></li>
+        <li class="intro__fact page__font-smoothed">Природных заповедников <span class="intro__span-accent">105</span></li>
+        <li class="intro__fact page__font-smoothed">Аэропортов <span class="intro__span-accent">241</span></li>
       </ul>
     </section>
     <section class="photo-grid page__photo-grid" aria-label="фотогалерея">
