--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </a>
         </div>
         <img class="place__image" src="./images/main-photo-park-kosa.jpg" alt="Куршская коса">
-        <div class="place__text">
+        <div>
           <p class="place__paragraph page__font-smoothed">
             Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта
             — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря
@@ -98,7 +98,7 @@
           </a>
         </div>
         <img class="place__image" src="./images/main-photo-kolsky.jpg" alt="Кольский">
-        <div class="place__text">
+        <div>
           <p class="place__paragraph page__font-smoothed">
             Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
             тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
@@ -121,7 +121,7 @@
           </a>
         </div>
         <img class="place__image" src="./images/main-photo-altai.jpg" alt="Алтай">
-        <div class="place__text">
+        <div>
           <p class="place__paragraph page__font-smoothed">
             Алтай — одно из красивейших мест в России.
             В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны,
@@ -145,7 +145,7 @@
           </a>
         </div>
         <img class="place__image" src="./images/main-photo-baikal.jpg" alt="Зимний Байкал">
-        <div class="place__text">
+        <div>
           <p class="place__paragraph page__font-smoothed">
             Всем известен Байкал как крупнейшее озеро
             в мире. Многие также знают, что это самый большой источник пресной
@@ -168,7 +168,7 @@
           </a>
         </div>
         <img class="place__image" src="./images/main-photo-karelia.jpg" alt="Карелия">
-        <div class="place__text">
+        <div>
           <p class="place__paragraph page__font-smoothed">
             Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница
             не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
